<resources>
    <string name="app_name"><b>Top News</b></string>

    <string name="source">Select Source</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="version_name">Version</string>
    <string name="powered_by">Powered by</string>
    <string name="api_link">NewsAPI.org</string>
    <string name="contact_support"><u>Contact Support</u></string>
    <string name="contact_email_subject">Top News - App Support Request</string>
    <string name="contact_email_body">Please describe any concerns with as much details as possible, thank you.</string>

    <string-array name="source_arrays">
        <item>Associated Press</item>
        <item>BBC News</item>
        <item>Bloomberg</item>
        <item>Buzzfeed</item>
        <item>CNBC</item>
        <item>CNN</item>
        <item>Engadget</item>
        <item>Entertainment Weekly</item>
        <item>ESPN</item>
        <item>Google News</item>
        <item>IGN</item>
        <item>Reuters</item>
        <item>TechCrunch</item>
        <item>The Huffington Post</item>
        <item>The New York Times</item>
        <item>The Times of India</item>
        <item>The Verge</item>
        <item>The Wall Street Journal</item>
        <item>The Washington Post</item>

    </string-array>

    <string name="no_news">No News Articles Found</string>
    <string name="no_internet_connection">No Internet Connection</string>

</resources>
