<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            android:layout_margin="2dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />


    </LinearLayout>

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/top_news_icon_512dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/news_api_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_link"
            android:autoLink="web"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/contact_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contact_support"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="onContactSupportClick"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>